...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Yix-l1-tWO" id="hVi-TD-1bI"/>
                            <outlet property="delegate" destination="Yix-l1-tWO" id="jwC-UQ-cYp"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Todos" id="qSb-2p-518"/>
                    <connections>
                        <outlet property="view" destination="zrv-x0-HKj" id="nWB-B9-RJj"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="JcH-p3-bLi" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
